web-infras/parser/tests/fixtures/babel/core/uncategorised/515/output.txt
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,12)
1|function a(eval) { "use strict"; }
 |          ^
